# nomad-tools

./: .dockerignore  .exrc  .gitignore  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  Vagrantfile  docker-compose.yml  example.nomad.hcl  gen_readme.py  integration_tests.sh  nomadtools-githubrunner.nomad.hcl  pyproject.toml  requirements-test.txt  requirements.txt  template_README.md  tox.ini  unit_tests.sh  with_uv.sh
.github/: FUNDING.yml  bump.yml  dependabot.yml
.github/workflows/: codeql.yml  main.yml  release.yml
deploy/: .gitignore  githubrunner.yml  nomadtools-githubrunner.nomad.hcl
doc/: githubruner.md  githubrunner.md
jobs/: README.md  test-blocked.nomad.hcl  test-compute.nomad.hcl  test-deploymulti.nomad.hcl  test-dockerdextrahost.nomad.hcl  test-echo10sleep05.nomad.hcl  test-forever.nomad.hcl  test-invalidconfig.nomad.hcl  test-invalidtemplate.nomad.hcl  test-json.nomad.hcl  test-listen.nomad.hcl  test-maintask.nomad.hcl  test-manual.nomad.hcl  test-multiple.nomad.hcl  test-networkaliases.nomad.hcl  test-noutf.nomad.hcl  test-okpurge.nomad.hcl  test-onestays.nomad.hcl  test-run0.nomad.hcl  test-sigterm.nomad.hcl  test-start.nomad.hcl  test-start2.nomad.hcl  test-stay.nomad.hcl  test-template.nomad.hcl  test-upgrade1.nomad.hcl  test-upgrade2.nomad.hcl
src/nomad_tools/: __init__.py  _generator.py  aliasedgroup.py  aliasedlazygroup.py  chunker.py  colors.py  common.py  common_base.py  common_click.py  common_nomad.py  datadict.py  entry.py  entry_changed.py  entry_constrainteval.py  entry_cp.py  entry_dockers.py  entry_downloadrelease.py  entry_githubrunner.py  entry_gitlab_runner.py  entry_go.py  entry_info.py  entry_listattributes.py  entry_listnodeattributes.py  entry_nodenametoid.py  entry_port.py  entry_task.py  entry_taskexec.py  entry_topology.py  entry_vardir.py  entry_watch.py  entrypoint.py  exit_on_thread_exception.py  flagdebug.py  forward_args_to_nomad.py  mytabulate.py  nomad_cp.py  nomad_dockers.py  nomad_downloadrelease.py  nomad_gitlab_runner.py  nomad_port.py  (+12 more)
src/nomad_tools/entry_githubrunner/: __init__.py  default.nomad.hcl  entry_githubrunner.py  entrypoint.sh  startscript.sh  trydispatcheddoesntwork.nomad.hcl
src/nomad_tools/entry_gitlab_runner/: script.sh  template.jinja.nomad.hcl
src/nomad_tools/nomad_gitlab_runner/: docker.sh  exec.sh  script.sh  waiter.sh
src/nomad_tools/nomadlib/: __init__.py  connection.py  datadict.py  tools.py  types.py
tests/: Dockerfile.integration_test  conftest.py  echo10sleep05.nomad.hcl  install_nomad.sh  localnomad.py  nomad.hcl  provision.sh  run_in_docker.sh  start_dockerd.sh  start_nomad_server.sh  test_help.py  test_nomad_cp_complete.py  test_nomad_watch.py  test_taskexec_transfer_stats.py  testlib.py  tls_env.bash
tests/integration/: test_constrainteval.py  test_go.py  test_listattributes.py  test_listnodeattributes.py  test_nomad_changed  test_nomad_cp.py  test_nomad_dockers.py  test_nomad_gitlab_runner.py  test_nomad_vardir.py  test_nomad_watch.py  test_nomad_watch2.py  test_nomad_watch_plan.py  test_nomadlib_types.py  test_nomadt.py  test_taskexec.py
tests/nomad.d/: global-cli-nomad-key.pem  global-cli-nomad.pem  global-client-nomad-key.pem  global-client-nomad.pem  global-server-nomad-key.pem  global-server-nomad.pem  nomad-agent-ca-key.pem  nomad-agent-ca.pem  nomad.hcl  tls.hcl
tests/nomad.d/capath/: 12b561f7.0  94addf2d.0  cb1ff9e3.0  cb66180a.0  global-cli-nomad.pem  global-client-nomad.pem  global-server-nomad.pem  nomad-agent-ca.pem
tests/unit/: test_common.py  test_datadict.py  test_downloadrelease.py  test_githubrunner.py  test_go.py  test_help.py  test_nomad_cp.py  test_nomad_cp.sh  test_nomad_gitlab_runner.py  test_nomad_vardir.py  test_nomad_watch.py  test_nomadt.py  test_types.py
