[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning<2", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "nomad-tools"
description = "Set of tools and utilities to ease interacting with Hashicorp Nomad scheduling solution."
readme = "README.md"
authors = [{name = "Kamil Cukrowski"}]
license = {text = "GPL-3.0-or-later"}
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">3.7"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {test = { file = ["requirements-test.txt"] }}

[project.urls]
homepage = "https://github.com/Kamilcuk/nomad-tools"
repository = "https://github.com/Kamilcuk/nomad-tools"
documentation = "https://github.com/Kamilcuk/nomad-tools"

[project.scripts]
nomadtools = "nomad_tools:entrypoint.main"

[tool.setuptools.package-data]
"*" = ["*/*.sh", "*.sh", "*/*.nomad.hcl", "*/*/*.nomad.hcl"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=short"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(filename)s:%(lineno)s %(message)s"
log_cli_date_format = "%H:%M:%S"
testpaths = [
	"tests/unit",
]
filterwarnings = [
	"ignore::DeprecationWarning",
]
log_file_format = "%(asctime)s %(levelname)s %(filename)s:%(lineno)s %(message)s"
log_file_level = "DEBUG"

[tool.pyright]
include = ["src"]
pythonVersion = "3.7"
typeCheckingMode = "basic"
reportUnnecessaryComparison = "error"
reportUnusedParameter = false
reportUnknownParameterType = false
